--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Windows95';
-    src: url('../font/windows95.woff2') format('woff2'),
-        url('../font/windows95.woff') format('woff');
+    src: url('font/windows95.woff2') format('woff2'),
+        url('font/windows95.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -63,6 +63,10 @@ body {
 
 .card-footer {
     padding-bottom: 10px;
+}
+
+.card-footer > *{
+    margin-right: 5px;
 }
 
 .btn {
